--- a/native/mirage/Cargo.toml
+++ b/native/mirage/Cargo.toml
@@ -12,4 +12,5 @@ crate-type = ["cdylib"]
 [dependencies]
 image = "0.21"
 lazy_static = "1.2"
-rustler = "~0.21"
+#rustler = "~0.21"
+rustler = { git = "https://github.com/rusterlium/rustler", branch = "master" }
